--- a/src/Marten.Testing.OtherAssembly/Marten.Testing.OtherAssembly.csproj
+++ b/src/Marten.Testing.OtherAssembly/Marten.Testing.OtherAssembly.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Marten.Testing.OtherAssembly</RootNamespace>
     <AssemblyName>Marten.Testing.OtherAssembly</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -43,6 +43,9 @@
   <ItemGroup>
     <Compile Include="DeeperNamespace\BaseDocumentWithId.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Marten.Testing.OtherAssembly.project.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
