little bit of work on event projection progression logging and reading

--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Events\patch_writing.cs" />
     <Compile Include="Events\Projections\AggregationStepTests.cs" />
     <Compile Include="Events\Projections\AggregatorTests.cs" />
+    <Compile Include="Events\Projections\Async\StagedEventDataTests.cs" />
     <Compile Include="Events\Projections\inline_aggregation_by_stream_with_multiples.cs" />
     <Compile Include="Events\Projections\inline_transformation_of_events.cs" />
     <Compile Include="Events\Projections\MonsterSlayed.cs" />
