--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -158,6 +158,8 @@
     <Compile Include="Schema\DocumentSchemaExtensions.cs" />
     <Compile Include="Schema\DocumentSchemaObjects.cs" />
     <Compile Include="Schema\Arguments\DotNetTypeArgument.cs" />
+    <Compile Include="Schema\FunctionBody.cs" />
+    <Compile Include="Schema\FunctionDiff.cs" />
     <Compile Include="Schema\IDbObjects.cs" />
     <Compile Include="Schema\IDDLRunner.cs" />
     <Compile Include="Schema\IdentityAttribute.cs" />
