--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -63,7 +63,11 @@
     <Compile Include="Events\Projections\AggregationProjection.cs" />
     <Compile Include="Events\Projections\AggregationStep.cs" />
     <Compile Include="Events\Projections\Aggregator.cs" />
-    <Compile Include="Events\Projections\Async\AsyncDaemonClasses.cs" />
+    <Compile Include="Events\Projections\Async\EventPage.cs" />
+    <Compile Include="Events\Projections\Async\IStagedEventData.cs" />
+    <Compile Include="Events\Projections\Async\ProjectionTrack.cs" />
+    <Compile Include="Events\Projections\Async\StagedEventData.cs" />
+    <Compile Include="Events\Projections\Async\StagedEventOptions.cs" />
     <Compile Include="Events\Projections\IAggregation.cs" />
     <Compile Include="Events\Projections\IAggregationFinder.cs" />
     <Compile Include="Events\Projections\IAggregator.cs" />
