--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Schema\DbObjects.cs" />
     <Compile Include="Schema\Arguments\DocJsonBodyArgument.cs" />
     <Compile Include="Schema\Arguments\DocTypeArgument.cs" />
+    <Compile Include="Schema\DeleteStyle.cs" />
     <Compile Include="Schema\DocumentSchemaExtensions.cs" />
     <Compile Include="Schema\DocumentSchemaObjects.cs" />
     <Compile Include="Schema\Arguments\DotNetTypeArgument.cs" />
@@ -200,6 +201,7 @@
     <Compile Include="Schema\Identity\Sequences\LongHiloGenerator.cs" />
     <Compile Include="Schema\Identity\NoOpIdGeneration.cs" />
     <Compile Include="Schema\SchemaPatch.cs" />
+    <Compile Include="Schema\SoftDeletedAttribute.cs" />
     <Compile Include="Schema\SubClassMapping.cs" />
     <Compile Include="Schema\DatabaseSchemaGenerator.cs" />
     <Compile Include="Schema\UpsertFunction.cs" />
