--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Services\ChangeSet.cs" />
     <Compile Include="Services\CommandRunnerMode.cs" />
     <Compile Include="Services\DeleteCall.cs" />
+    <Compile Include="Services\Deletes\DeleteClasses.cs" />
     <Compile Include="Services\DeleteWhereCall.cs" />
     <Compile Include="Services\FetchResult.cs" />
     <Compile Include="Services\ICall.cs" />
