--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Schema\configuring_mapping_deletion_style.cs" />
     <Compile Include="Schema\creating_a_full_patch.cs" />
     <Compile Include="Schema\DbObjectsTests.cs" />
+    <Compile Include="Schema\deriving_delete_sql_for_document_type.cs" />
     <Compile Include="Schema\DocumentMapping_schema_patch_writing.cs" />
     <Compile Include="Schema\Identity\GuidIdGeneratorTests.cs" />
     <Compile Include="Schema\Identity\IdAssignerTests.cs" />
