can validate or apply all outstanding schema changes upfront. Closes GH-423, Closes GH-428

--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Services\BatchQuerying\TransformedBatchQueryable.cs" />
     <Compile Include="Services\ChangeSet.cs" />
     <Compile Include="Services\CommandRunnerMode.cs" />
+    <Compile Include="Services\ConcurrencyException.cs" />
     <Compile Include="Services\Deletes\DeleteById.cs" />
     <Compile Include="Services\Deletes\DeleteWhere.cs" />
     <Compile Include="Services\FetchResult.cs" />
