--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Schema\SoftDeletedAttribute.cs" />
     <Compile Include="Schema\SubClassMapping.cs" />
     <Compile Include="Schema\DatabaseSchemaGenerator.cs" />
+    <Compile Include="Schema\SystemFunction.cs" />
     <Compile Include="Schema\UpsertFunction.cs" />
     <Compile Include="Schema\UseOptimisticConcurrencyAttribute.cs" />
     <Compile Include="Schema\Arguments\VersionArgument.cs" />
@@ -355,6 +356,9 @@
     <EmbeddedResource Include="..\..\javascript\mt_patching.js">
       <Link>Schema\SQL\mt_patching.js</Link>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Schema\SQL\mt_immutable_timestamp.sql" />
   </ItemGroup>
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2')">
