--- a/src/Marten/Marten.csproj
+++ b/src/Marten/Marten.csproj
@@ -308,10 +308,15 @@
     <Compile Include="QueryableExtensions.cs" />
     <Compile Include="Transforms\DocumentTransforms.cs" />
     <Compile Include="Transforms\IDocumentTransforms.cs" />
+    <Compile Include="Transforms\ISelectableOperator.cs" />
     <Compile Include="Transforms\ITransforms.cs" />
     <Compile Include="Transforms\TransformExtensions.cs" />
     <Compile Include="Transforms\TransformFunction.cs" />
+    <Compile Include="Transforms\TransformToJsonNode.cs" />
+    <Compile Include="Transforms\TransformToJsonResultOperator.cs" />
     <Compile Include="Transforms\TransformToJsonSelector.cs" />
+    <Compile Include="Transforms\TransformToOtherTypeNode.cs" />
+    <Compile Include="Transforms\TransformToOtherTypeOperator.cs" />
     <Compile Include="Transforms\TransformToTypeSelector.cs" />
     <Compile Include="Util\EnumerableExtensions.cs" />
     <Compile Include="Util\LambdaBuilder.cs" />
