--- a/src/Marten.Testing/Marten.Testing.csproj
+++ b/src/Marten.Testing/Marten.Testing.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Bugs\Bug_415_containment_operator_with_values_with_quotes.cs" />
     <Compile Include="Bugs\Bug_416_cannot_create_index_on_datetime_field.cs" />
     <Compile Include="Bugs\Bug_431_not_patching_with_the_doc_type_column.cs" />
+    <Compile Include="Bugs\Bug_432_querying_with_UTC_times_with_offset.cs" />
     <Compile Include="bulk_loader_overwrite_sql_tests.cs" />
     <Compile Include="Events\capturing_event_versions_on_existing_streams_after_append.cs" />
     <Compile Include="Events\EventStreamTester.cs" />
