--- a/src/Marten/project.json
+++ b/src/Marten/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "0.9.7-beta-*",
+  "version": "1.0.0-alpha-*",
   "description": "Postgresql as a Document Db and Event Store for .Net Development",
   "authors": [ "Jeremy D. Miller", "Tim Cools", "Jeff Doolittle" ],
   "packOptions": {
@@ -20,19 +20,19 @@
     }
   },
   "dependencies": {
-    "Newtonsoft.Json": "8.0.3",
-    "Remotion.Linq": "2.0.2",
+    "Newtonsoft.Json": "9.0.1",
+    "Remotion.Linq": "2.1.1",
     "Baseline": {
-      "version": "0.5.1-alpha-29"
+      "version": "1.0.0-alpha-32"
     }
   },
   "frameworks": {
     "netstandard1.3": {
       "dependencies": {
-        "Npgsql": "3.1.3",
-        "System.Linq.Queryable": "4.0.1-rc2-24027",
-        "System.ObjectModel": "4.0.12-rc2-24027",
-        "System.Reflection": "4.1.0-rc2-24027"
+        "Npgsql": "3.1.4",
+        "System.Linq.Queryable": "4.0.1",
+        "System.ObjectModel": "4.0.12",
+        "System.Reflection": "4.1.0"
       },
       "imports": [
         "dnxcore50",
